--- a/scorebot/templates/index.html
+++ b/scorebot/templates/index.html
@@ -15,28 +15,43 @@
             min-height: 100vh;
             display: -webkit-box;
             display: -ms-flexbox;
-            display: flex;
             -webkit-box-align: center;
             -ms-flex-align: center;
-            align-items: center;
             -webkit-box-pack: center;
             -ms-flex-pack: center;
-            justify-content: center;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+        }
+
+        .globalbox {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+        }
+
+        .teamsbox {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
     </style>
 </head>
 
 <body>
 
-    <div style="flex-direction: row;">
-        <div>
+    <div class="globalbox">
+        <div class="teamsbox">
             {% for team in game.teams %}
-            <div id="termynal" data-termynal style="margin-bottom: 10px;">
-                <span data-ty="input">{{ team.name }} ( {{ team.host.ipaddress }} ) </span>
-                <span>ATTACK POINTS : {{ team.points.attack }}</span>
-                <span>ATTACK DEFENSE :{{ team.points.defense }}</span>
+            <div id="termynal" data-termynal style="margin-right: 25px; width: 500px; font-size: 20px;">
+                <span data-ty="input">{{ team.name }}</span>
+                <span>ATTACK POINTS : {{ team.points.attack }} <br> ATTACK DEFENSE : {{ team.points.defense }} </span>
             </div>
             {% endfor %}
         </div>
