fix terminal.js file

--- a/scorebot/templates/index.html
+++ b/scorebot/templates/index.html
@@ -62,5 +62,5 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/termynal.js') }}" data-termynal-container="#termynal"></script>
+    <script src="{{ url_for('static', filename='js/termynal.min.js') }}" data-termynal-container="#termynal"></script>
 </body>
