--- a/scorebot/templates/submit.html
+++ b/scorebot/templates/submit.html
@@ -60,5 +60,5 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/termynal.js') }}" data-termynal-container="#termynal"></script>
+    <script src="{{ url_for('static', filename='js/termynal.min.js') }}" data-termynal-container="#termynal"></script>
 </body>
