scrollabar style left history logs

--- a/scorebot/templates/index.html
+++ b/scorebot/templates/index.html
@@ -42,6 +42,41 @@
             justify-content: space-between;
         }
     </style>
+<style type="text/css">
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+</style>
 </head>
 
 <body>
@@ -55,12 +90,18 @@
             </div>
             {% endfor %}
         </div>
-        <div id="termynal" data-termynal>
+        <div id="termynal" data-termynal style="padding-right: 5px;">
+	    <div style="overflow-y: auto; overflow-x: hidden; max-height: 500px;" id="history">
             {% for history in game.history %}
             <span data-ty="input">{{ history }}</span>
             {% endfor %}
+            </div>
         </div>
     </div>
 
     <script src="{{ url_for('static', filename='js/termynal.min.js') }}" data-termynal-container="#termynal"></script>
+    <script>
+      var elem = document.getElementById('history');
+      elem.scrollTop = elem.scrollHeight;
+    </script>
 </body>
